[package]
name = "sprites7800"
version = "0.4.3"
edition = "2021"
authors = ["Bruno STEUX <bruno.steux@gmail.com>"]
license = "GPL-3.0-or-later"
description = "a companion tool of cc7800 generating C sprites/tiles code"
readme = "README.md"
homepage = "https://github.com/steux/tools7800"
repository = "https://github.com/steux/tools7800"
keywords = ["cli", "gamedev"]
categories = ["command-line-utilities", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_derive = "4"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
