[package]
name = "tiles7800"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml_dom = "0.2"
clap = { version = "4", features = ["derive"] }
clap_derive = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
image = "0.24"
