[package]
name = "tiles7800"
version = "0.4.0"
edition = "2021"
authors = ["Bruno STEUX <bruno.steux@gmail.com>"]
license = "GPL-3.0-or-later"
description = "a companion tool of cc7800 generating tiling data from Tiled maps"
readme = "README.md"
homepage = "https://github.com/steux/tools7800"
repository = "https://github.com/steux/tools7800"
keywords = ["cli", "gamedev"]
categories = ["command-line-utilities", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml_dom = "0.2"
clap = { version = "4", features = ["derive"] }
clap_derive = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
image = "0.25"
